# streamblocks-partitioning

./: readme.md
partitioning/: .gitignore  partition  pom.xml
partitioning/platform-partition/: pom.xml
profiling/: readme.md
profiling/hardware/: .gitignore  CMakeLists.txt  Loopback.cal  StreamBlocks.cmake  bandwidthPlot.py  common.cal  loopback.cal
profiling/hardware/bandwidth/: CMakeLists.txt  bandwidth.cpp  bandwidth.py
profiling/hardware/bandwidth/art-plink/: CMakeLists.txt
profiling/hardware/include/: globals.h
profiling/hardware/lib/: CMakeLists.txt
profiling/hardware/lib/art-plink/: device-handle.cc  device-handle.h
profiling/hardware/lib/art-runtime/: CMakeLists.txt
profiling/hardware/scripts/: bandwidth-test.sh.in
profiling/hardware/src/: globals.cc  main.cc  sink.cc  source.cc  system_plink_0.cc
profiling/hardware/vivado-hls/: CMakeLists.txt
profiling/hardware/vivado-hls/cmake/: Helper.cmake
profiling/hardware/vivado-hls/code-gen/auxiliary/: pass.dot  profiling_hardware_loopback_BandwidthTester.dot
profiling/hardware/vivado-hls/code-gen/include/: globals.h  pass.h
profiling/hardware/vivado-hls/code-gen/rtl/: BandwidthTester_wrapper.sv  kernel.xml  pass_Out_sink_In_output_stage.sv  source_Out_pass_In_input_stage.sv
profiling/hardware/vivado-hls/code-gen/rtl-tb/: tb_BandwidthTester.v  tb_pass.v
profiling/hardware/vivado-hls/code-gen/src/: pass.cpp  pass_Out_sink_In_output_stage_mem.cpp  source_Out_pass_In_input_stage_mem.cpp
profiling/hardware/vivado-hls/code-gen/src-tb/: tb_BandwidthTester.cpp  tb_pass.cpp
profiling/hardware/vivado-hls/code-gen/wcfg/: tb_BandwidthTester_behav.wcfg
profiling/hardware/vivado-hls/output/kernel/packaged_kernel_BandwidthTester_kernel_hw_xilinx_kcu1500_dynamic_5_0/: component.xml
profiling/hardware/vivado-hls/output/kernel/packaged_kernel_BandwidthTester_kernel_hw_xilinx_kcu1500_dynamic_5_0/sim/: BandwidthTester_control_s_axi.v  pass.v  pass_Out_sink_In_output_stage_mem_pass_Out_sink_In_m_axi.v
profiling/hardware/vivado-hls/output/kernel/packaged_kernel_BandwidthTester_kernel_hw_xilinx_kcu1500_dynamic_5_0/src/: pass_Out_sink_In_output_stage_mem.v  source_Out_pass_In_input_stage_mem.v  source_Out_pass_In_input_stage_mem_source_Out_pass_In_m_axi.v
profiling/hardware/vivado-hls/output/kernel/packaged_kernel_BandwidthTester_kernel_hw_xilinx_kcu1500_dynamic_5_0/xgui/: BandwidthTester_kernel_v1_0.tcl
profiling/hardware/vivado-hls/output/kernel/tmp_kernel_pack_BandwidthTester_kernel_hw_xilinx_kcu1500_dynamic_5_0/: kernel_pack.xpr
profiling/hardware/vivado-hls/output/kernel/tmp_kernel_pack_BandwidthTester_kernel_hw_xilinx_kcu1500_dynamic_5_0/kernel_pack.srcs/sources_1/imports/rtl/: BandwidthTester.sv  BandwidthTester_kernel.v  BandwidthTester_pure.sv
profiling/hardware/vivado-hls/scripts/: BandwidthTester.tcl.in  package_kernel.tcl.in
profiling/software/: .gitignore  CMakeLists.txt  bandwidthPlot.py
profiling/software/lib/: CMakeLists.txt
profiling/software/lib/art-runtime/: CMakeLists.txt
profiling/software/scripts/: bandwidth-test.sh.in  config.xml.in
profiling/software/src/: main.cc  pass_through.cc  timed_sink.cc  timed_source.cc
streamblocks-dse/: build.sbt
streamblocks-dse/src/main/scala/: Generator.scala  Main.scala
(+42 files in other folders)
